# ompi-ncbtl

./: Makefile.am  btl_nc.c  btl_nc.h  btl_nc_component.c  configure.m4
